--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Trimet Analysis</title>
-    <meta http-equiv = "refresh" content = "0; url = https://github.com/Gary-Schulke/leaflet-challenge/tree/master/Leaflet-Step-2/index.html" />
+    <meta http-equiv = "refresh" content = "0; url = https://gary-schulke.github.io/leaflet-challenge/Leaflet-Step-2/index.html" />
 </head>
 
 <body>
